test/libhyperion/syntaxTests/denominations/invalid_denomination_on_string.hyp
contract C {
	string s = "abc" zond;
}
// ----
// ParserError 2314: (31-35): Expected ';' but got 'zond'
